apps/function-plotter/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-function-plotter
  namespace: apps
spec:
  stripPrefix:
    prefixes:
      - /function-plotter
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: function-plotter
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`${DOMAIN}`) && PathPrefix(`/function-plotter`)
      kind: Rule
      services:
        - name: function-plotter
          port: 80
      middlewares:
        - name: crowdsec-bouncer
        - name: strip-function-plotter
        - name: default-headers
        - name: rate-limit-app
  tls:
    store:
      name: default
      namespace: kube-system
